<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragments_background"
    tools:context=".ConditionFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="174dp"
        android:layout_height="121dp"
        android:src="@drawable/logo_png"
        tools:layout_editor_absoluteX="118dp"
        tools:layout_editor_absoluteY="31dp"
        tools:src="@drawable/logo_png"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/abel"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"/>
    <TextView
        android:id="@+id/nameInstruction"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/name_instruction"
        android:fontFamily="casual"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appName"
        android:layout_marginTop="40dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mathLayout"
        android:layout_width="310dp"
        android:layout_height="269dp"
        app:layout_constraintTop_toBottomOf="@id/nameInstruction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_corner">

        <TextView
            android:id="@+id/first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/first_name"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:layout_marginStart="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/your_name"
            android:fontFamily="casual"
            app:layout_constraintStart_toEndOf="@id/first"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp" />

        <TextView
            android:id="@+id/last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/last_name"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:layout_marginStart="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/first" />

        <EditText
            android:id="@+id/editLast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/your_name"
            android:fontFamily="casual"
            app:layout_constraintStart_toEndOf="@id/last"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editFirst"
            android:layout_marginTop="30dp" />

        <TextView
            android:id="@+id/invalidName"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fontFamily="casual"
            android:text="@string/invalid_name"
            android:textColor="@color/red"
            android:textSize="15sp"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/finish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mathLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>