<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragments_background"
    tools:context=".AgeFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="174dp"
        android:layout_height="121dp"
        android:src="@drawable/logo_png"
        tools:layout_editor_absoluteX="118dp"
        tools:layout_editor_absoluteY="31dp"
        tools:src="@drawable/logo_png"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/abel"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"/>

    <TextView
        android:id="@+id/ageInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/age_instruction"
        android:fontFamily="casual"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appName" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dateLayout"
        android:layout_width="310dp"
        android:layout_height="269dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_corner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ageInstruction">

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/invalidAge"
            android:layout_width="231dp"
            android:layout_height="45dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="casual"
            android:text="@string/invalid_age"
            android:textColor="@color/red"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/datePicker" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/continueButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateLayout" />

    <SeekBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="353dp"
        android:layout_height="43dp"
        android:layout_marginTop="30dp"
        android:max="5"
        android:progress="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continueButton" />


</androidx.constraintlayout.widget.ConstraintLayout>