<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragments_background"
    tools:context=".ConditionFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="174dp"
        android:layout_height="121dp"
        android:src="@drawable/logo_png"
        tools:layout_editor_absoluteX="118dp"
        tools:layout_editor_absoluteY="31dp"
        tools:src="@drawable/logo_png"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/abel"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"/>
    <TextView
        android:id="@+id/mathInstruction"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/math_instruction"
        android:fontFamily="casual"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appName"
        android:layout_marginTop="40dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mathLayout"
        android:layout_width="310dp"
        android:layout_height="269dp"
        app:layout_constraintTop_toBottomOf="@id/mathInstruction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corner">

        <TextView
            android:id="@+id/equation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            tools:text="3 * x = 9"
            android:maxLines="1"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/solution"/>

        <TextView
            android:id="@+id/correctSolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="casual"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/equation"
            tools:text="80" />

        <EditText
            android:id="@+id/solution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:hint="@string/your_solution"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/equation" />

        <TextView
            android:id="@+id/invalidSol"
            android:layout_width="231dp"
            android:layout_height="45dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="casual"
            android:text="@string/invalid_sol"
            android:textColor="@color/red"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
             />

<!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--            android:id="@+id/sendSol"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:clickable="true"-->
<!--            android:scaleType="center"-->
<!--            android:src="@android:drawable/ic_menu_send"-->
<!--            app:fabCustomSize="30dp"-->
<!--            app:layout_constraintBottom_toBottomOf="@+id/solution"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toEndOf="@+id/solution"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/equation" />-->

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/successGif"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/vee"
            app:layout_constraintBottom_toBottomOf="@+id/correctSolution"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/solution"
            app:layout_constraintTop_toTopOf="@+id/correctSolution" />



    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/continueButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mathLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>